--- a/src/Apple.css
+++ b/src/Apple.css
@@ -6,8 +6,25 @@
     font-family: 'Poppins', sans-serif;
 }
 
-html{
-    scroll-behavior: smooth;
+html {
+  --scrollbarBG: #CFD8DC;
+  --thumbBG: #90A4AE;
+}
+body::-webkit-scrollbar {
+  width: 13px;
+}
+body {
+  scrollbar-width: thin;
+  scrollbar-color:  white;
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar-track {
+  background: black;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: black ;
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
 }
 
 .navigation{
